data/derived/comb/progs/unify/prog7982.ml.out
Characters 29-44:
  let fixpoint (f,b) = wwhile ((wwhile(f,b),b),b);;
                               ^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
